--- a/slambda-doc/src/css/custom.css
+++ b/slambda-doc/src/css/custom.css
@@ -4,27 +4,26 @@
  * work well for content-centric websites.
  */
 
-/* You can override the default Infima variables here. */
-:root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+[data-theme='dark'] {
+  --ifm-color-primary: #30a3bb;
+  --ifm-color-primary-dark: #2b93a8;
+  --ifm-color-primary-darker: #298b9f;
+  --ifm-color-primary-darkest: #227283;
+  --ifm-color-primary-light: #37b2cc;
+  --ifm-color-primary-lighter: #40b6ce;
+  --ifm-color-primary-lightest: #5cc0d5;
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+:root {
+  --ifm-color-primary: #164b56;
+  --ifm-color-primary-dark: #14434d;
+  --ifm-color-primary-darker: #134049;
+  --ifm-color-primary-darkest: #0f343c;
+  --ifm-color-primary-light: #18525f;
+  --ifm-color-primary-lighter: #195663;
+  --ifm-color-primary-lightest: #1d6170;
+}
+
+article a {
+  text-decoration: underline;
 }
